--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,8 @@
 
 <ion-content>
   <div class="ion-padding">
+      The count: {{count}}
+      
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
